RESOLVED FIXED131259
Subpixel rendering: Slow paint path for inlines should snap to device pixels.
https://bugs.webkit.org/show_bug.cgi?id=131259
Summary Subpixel rendering: Slow paint path for inlines should snap to device pixels.
alan
Reported 2014-04-04 21:17:37 PDT
Similarly to simple line layout paint path. (off-by-one painting error happens when a property that pushes inlines to slow path gets added -text-shadow, transform etc)
Attachments
Patch (5.76 KB, patch)
2014-04-04 21:59 PDT, alan
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 (2.11 MB, application/zip)
2014-04-04 22:58 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion (2.08 MB, application/zip)
2014-04-04 23:24 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion (2.08 MB, application/zip)
2014-04-05 00:19 PDT, Build Bot
no flags
Patch (4.88 KB, patch)
2014-04-07 13:48 PDT, alan
no flags
Patch (4.99 KB, patch)
2014-04-08 07:45 PDT, alan
no flags
alan
Comment 1 2014-04-04 21:59:49 PDT
Build Bot
Comment 2 2014-04-04 22:58:24 PDT
Comment on attachment 228655 [details] Patch Attachment 228655 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6509418980048896 New failing tests: fast/multicol/newmulticol/columns-shorthand-parsing.html platform/mac/fast/scrolling/scroll-iframe-latched-mainframe.html fast/multicol/newmulticol/layers-in-multicol.html fast/regions/selection/selecting-text-through-different-region-flows-2.html platform/mac/fast/scrolling/scroll-select-latched-mainframe.html fast/regions/floats-basic-in-variable-width-regions.html fast/css/word-spacing-between-blocks.html fast/forms/textAreaLineHeight-simple-lines.html fast/regions/selection/selecting-text-through-different-region-flows.html fast/css/word-spacing-between-inlines.html fast/multicol/newmulticol/column-rules-fixed-height.html platform/mac/fast/scrolling/scroll-div-latched-mainframe.html
Build Bot
Comment 3 2014-04-04 22:58:27 PDT
Created attachment 228657 [details] Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 4 2014-04-04 23:24:48 PDT
Comment on attachment 228655 [details] Patch Attachment 228655 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/5147332379148288 New failing tests: fast/multicol/newmulticol/columns-shorthand-parsing.html fast/multicol/newmulticol/layers-in-multicol.html fast/regions/selection/selecting-text-through-different-region-flows-2.html fast/css/word-spacing-between-inlines.html fast/regions/floats-basic-in-variable-width-regions.html fast/css/word-spacing-between-blocks.html fast/forms/textAreaLineHeight-simple-lines.html fast/regions/selection/selecting-text-through-different-region-flows.html fast/multicol/newmulticol/column-rules-fixed-height.html
Build Bot
Comment 5 2014-04-04 23:24:51 PDT
Created attachment 228659 [details] Archive of layout-test-results from webkit-ews-03 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-03 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 6 2014-04-05 00:19:40 PDT
Comment on attachment 228655 [details] Patch Attachment 228655 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6209688244846592 New failing tests: fast/multicol/newmulticol/columns-shorthand-parsing.html fast/multicol/newmulticol/layers-in-multicol.html fast/regions/selection/selecting-text-through-different-region-flows-2.html fast/css/word-spacing-between-inlines.html fast/regions/floats-basic-in-variable-width-regions.html fast/css/word-spacing-between-blocks.html fast/forms/textAreaLineHeight-simple-lines.html fast/regions/selection/selecting-text-through-different-region-flows.html fast/multicol/newmulticol/column-rules-fixed-height.html
Build Bot
Comment 7 2014-04-05 00:19:44 PDT
Created attachment 228664 [details] Archive of layout-test-results from webkit-ews-05 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-mountainlion Platform: Mac OS X 10.8.5
alan
Comment 8 2014-04-07 13:48:17 PDT
Simon Fraser (smfr)
Comment 9 2014-04-07 15:09:43 PDT
Comment on attachment 228755 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=228755&action=review > Source/WebCore/rendering/TextPainter.h:84 > - FloatRect& m_boxRect; > - FloatPoint& m_textOrigin; > + FloatRect m_boxRect; > + FloatPoint m_textOrigin; Changelog didn't explain this.
alan
Comment 10 2014-04-08 07:45:01 PDT
alan
Comment 11 2014-04-08 07:45:17 PDT
Comment on attachment 228835 [details] Patch EWS
WebKit Commit Bot
Comment 12 2014-04-08 09:20:23 PDT
Comment on attachment 228835 [details] Patch Clearing flags on attachment: 228835 Committed r166929: <http://trac.webkit.org/changeset/166929>
WebKit Commit Bot
Comment 13 2014-04-08 09:20:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.