Subpixel rendering: Slow paint path for inlines should snap to device pixels. https://bugs.webkit.org/show_bug.cgi?id=131259

Reviewed by Simon Fraser.

InlineTextBox::paint needs to round to the same device pixel position as SimpleLineLayout does.

Source/WebCore:

Test: fast/inline/hidpi-slow-path-text-on-subpixel-position.html

* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::paint):
* rendering/TextPainter.h: Cleanup. No reason to have them as references here.

LayoutTests:

* fast/inline/hidpi-slow-path-text-on-subpixel-position-expected.html: Added.
* fast/inline/hidpi-slow-path-text-on-subpixel-position.html: Added.


Canonical link: https://commits.webkit.org/149414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166929 268f45cc-cd09-0410-ab3c-d52691b4dbfc